added the presenter and also included the rx java thus enhancing the mvp to mvvm

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">MobileDataSIngapore</string>
+    <string name="fetching_data">Fetching Data</string>
 </resources>
