click listener on image whose volume dip in one quarter of a year

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="year">Year - </string>
     <string name="mobile_data_usage">Mobile Data Usage Yearly -</string>
     <string name="toast_loading">Loading</string>
+    <string name="quarter_dip">Quarterly Usage of Mobile Data Drops</string>
 </resources>
