added the test case

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="mobile_data_usage">Mobile Data Usage Yearly -</string>
     <string name="toast_loading">Loading</string>
     <string name="quarter_dip">Quarterly Usage of Mobile Data Drops</string>
+    <string name="please_try_again_later">Please try again later.</string>
 </resources>
